cis-standalone/2-tier-crd-with-haproxy/app/ns_dep_svc.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-world
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: f5-demo-httpd
  namespace: hello-world
  labels:
    app: hello-world
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
        - name: f5-demo-httpd
          image: f5devcentral/f5-demo-httpd:openshift
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: hello-world
spec:
  type: ClusterIP
  ports:
    - name: http-8080
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: https-8443
      port: 8443
      targetPort: 8443
      protocol: TCP
  selector:
      app: hello-world
