cis-standalone/2-tier-crd-with-haproxy/app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-world-route
  namespace: hello-world
spec:
  host: hello-world.example.com
  path: /
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
  to:
    kind: Service
    name: hello-world
    weight: 100
  port:
    targetPort: 8080
